dev_move_test/objects/License_Users__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <description>Field populated by workflow for allowing lookup filter on contact selection</description>
        <inlineHelpText>Field populated by workflow for allowing lookup filter on contact selection</inlineHelpText>
        <label>AccountID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>License Users</relationshipLabel>
        <relationshipName>License_Users</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <defaultValue>Today() + 30</defaultValue>
        <description>Date this seat expires</description>
        <inlineHelpText>Date this seat expires</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <referenceTo>License__c</referenceTo>
        <relationshipLabel>License Users</relationshipLabel>
        <relationshipName>License_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Seat_Status__c</fullName>
        <description>What is the current status of this users seat license</description>
        <inlineHelpText>What is the current status of this users seat license</inlineHelpText>
        <label>Seat Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueLicenseUserKey__c</fullName>
        <description>Concatenated join values to help preserve unique values in this table</description>
        <externalId>true</externalId>
        <label>UniqueLicenseUserKey</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>License Users</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>License_Admin_View</fullName>
        <columns>AccountID__c</columns>
        <columns>License__c</columns>
        <columns>Contact__c</columns>
        <columns>Seat_Status__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>License Admin View</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>LicenseUserId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_Matches_Account_Validation</fullName>
        <active>true</active>
        <description>Fires to make sure the contact being added to the license matches the license account</description>
        <errorConditionFormula>License__r.Account__r.Id  !=  Contact__r.Account.Id</errorConditionFormula>
        <errorMessage>Contact chosen for this license must be a contact under the license&apos;s account</errorMessage>
    </validationRules>
</CustomObject>